fix: align source control focus outline style with other components (#1403)

--- a/static/css/parts/ViewletSourceControl.css
+++ b/static/css/parts/ViewletSourceControl.css
@@ -1,6 +1,8 @@
 .SourceControl:focus {
-  outline: 1px solid red;
+  outline: var(--FocusOutline);
   outline-offset: -1px;
+  outline-style: solid;
+  outline-width: 1px;
 }
 
 .ViewSourceControlInput {
